[package]
name = "simpleRustKernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"

# set panic to abort to prevent stack unwinding and our language item "eh_personality" error
#[profile.dev]
#build-std = ["unstable"]
#panic = "abort"

#[profile.release]
#build-std = ["unstable"]
#panic = "abort"

#->moved to OStt json